ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tetish-inn-ingress
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: gce
    kubernetes.io/ingress.allow-http: "false"
    networking.gke.io/v1beta1.FrontendConfig: redirect-config

spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: tetish-inn-backend
            port: 
              number: 3000
